# cepheus

./: README.md  install.sh  requirements.txt
cepheus_description/: CMakeLists.txt  package.xml
cepheus_description/launch/: display.launch  gazebo.launch  gazebo.launch.py  state_publisher.launch.py  urdf.rviz
cepheus_description/models/urdf/: cepheus.gazebo  cepheus.xacro
cepheus_description/rviz/: display.rviz  urdf.rviz
cepheus_description/urdf/: cepheus.gazebo  cepheus.trans  cepheus.xacro  materials.xacro
cepheus_firmware/: CMakeLists.txt  package.xml
cepheus_firmware/launch/: bringup.launch  cepheus_joy.launch  demo_mode.launch  rplidar_a3.launch  ydlidar_s2.launch  ydlidar_x4.launch
cepheus_firmware/scripts/: cepheus_diagnostics.py
cepheus_gazebo/: CMakeLists.txt  package.xml
cepheus_gazebo/launch/: cepheus_warehouse.launch  main.launch.py
cepheus_gazebo/models/docking_station/: model.config
cepheus_gazebo/worlds/: ceph.world
cepheus_navigation/: CMakeLists.txt  package.xml
cepheus_navigation/config/: nav2_dwb_bt_params.yaml
cepheus_navigation/launch/: amcl.launch  cepheus_carto_navigation.launch  cepheus_gmap_amcl.launch  move_base.launch  nav2.launch.py
cepheus_navigation/param/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
cepheus_navigation/rviz/: cepheus_navigation.rviz
cepheus_odometry/: CMakeLists.txt  package.xml
cepheus_odometry/launch/: carto_odometry.launch
cepheus_slam/: CMakeLists.txt  package.xml
cepheus_slam/config/: gmapping.yaml
cepheus_slam/launch/: carto.launch.py  gmapping_slam.launch  main.launch.py  map_saver.launch
cepheus_slam/rviz/: cepheus_gmapping.rviz
