<?xml version="1.0"?>
<package format="2">
  <name>cepheus_odometry</name>
  <version>0.0.0</version>
  <description>The cepheus_odometry package</description>

  <maintainer email="kartiksoni@rigbetellabs.com">Kartik Soni</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cepheus_firmware</depend>
  <depend>cartographer_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>robot_localization</depend>
  <depend>rospy</depend>
  <depend>rtabmap_odom</depend>
  <depend>tf2_ros</depend>

</package>
